test/corpus/locals.txt
=====================
Locals
=====================
locals {
  test1 = 10
  test2 = -20.32
  test3 = true
  test4 = false
  test5 = "it string"
  test6 = 'it string'
  test7 = ['string1', 'string2', 'string3']
  test8 = [ ['string'], [42], [true] ]
  test9 = {
    boo = "10"
    foo = 11
    moo = true
    zoo = {}
  }
}

---

(source_file
  (local_declarations
    (assignment_expression
      (variable_name)
      (number))
    (assignment_expression
      (variable_name)
      (number))
    (assignment_expression
      (variable_name)
      (bool))
    (assignment_expression
      (variable_name)
      (bool))
    (assignment_expression
      (variable_name)
      (string))
    (assignment_expression
      (variable_name)
      (string))
    (assignment_expression
      (variable_name)
      (list
        (string)
        (string)
        (string)))
    (assignment_expression
      (variable_name)
      (list
        (list
          (string))
        (list
          (number))
        (list
          (bool))))
    (assignment_expression
      (variable_name)
      (map
        (assignment_expression
          (variable_name)
          (string))
        (assignment_expression
          (variable_name)
          (number))
        (assignment_expression
          (variable_name)
          (bool))
        (assignment_expression
          (variable_name)
          (map))))
  )
)
